--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                             <div class="row">
                                 <div class="buttons padd-15">
-                                    <a href="https://drive.google.com/file/d/1zPgibfI_Ed3Ivjy1wO_RYa3k_XGPXNjb/view?usp=drive_link" class="btn hire-me" target="_blank" download>Download CV</a>
+                                    <a href="https://drive.google.com/file/d/1zPgibfI_Ed3Ivjy1wO_RYa3k_XGPXNjb/view?usp=sharing" class="btn hire-me" target="_blank" download>Download CV</a>
                                 </div>
                             </div>
                         </div>
